Implemented Details of Asset Administration Shell 2.0.1 Fixed AAS-XML schema validation Refactored versioning of AAS schemas Packages updated